# shulchan-aruch-yomi

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  main.py  pyproject.toml  requirements.txt
.github/state/: last_update_id.json
.github/workflows/: ci.yml  daily.yml  poll-commands.yml
data/: volumes.json
data/cache/: pair_2026-02-17.json  pair_2026-02-18.json  pair_2026-02-19.json  pair_2026-02-20.json  pair_2026-02-21.json  pair_2026-02-22.json  pair_2026-02-23.json  pair_2026-02-24.json  pair_2026-02-25.json  pair_2026-02-26.json  pair_2026-02-27.json  pair_2026-02-28.json  pair_2026-03-02.json  pair_2026-03-03.json  pair_2026-03-04.json  pair_2026-03-05.json  pair_2026-03-06.json  pair_2026-03-07.json  pair_2026-03-08.json  pair_2026-03-09.json  pair_2026-03-10.json  pair_2026-03-11.json  pair_2026-03-12.json  pair_2026-03-13.json  pair_2026-03-14.json  pair_2026-03-17.json  pair_2026-03-18.json  pair_2026-03-19.json  pair_2026-03-20.json  pair_2026-03-21.json  pair_2026-03-22.json  pair_2026-03-23.json  pair_2026-03-24.json  pair_2026-03-25.json
scripts/: poll_commands.py  run_polling.py
src/: bot.py  commands.py  config.py  formatter.py  models.py  sefaria.py  selector.py  subscribers.py  tts.py
src/unified/: __init__.py  publisher.py
tests/: conftest.py  test_commands.py  test_formatter.py  test_models.py  test_sefaria.py  test_selector.py  test_subscribers.py  test_tts.py
